<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <LinearLayout
      android:orientation="horizontal"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content">
	  
      <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:textColor="#FFFF4D"
	    android:padding="2dip"
	    android:text="@string/tvFlashLabel"/>
      <TextView
	    android:id="@+id/id"
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:textColor="#FFFFFF"
	    android:padding="2dip"/>
     <TextView
	    android:layout_width="wrap_content"
        android:layout_height="fill_parent"
	    android:textColor="#F50505"
	    android:padding="2dip"
	    android:text="@string/tvBangLabel"/>
      <TextView
	    android:id="@+id/text1"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:textColor="#FFFFFF"
	    android:padding="2dip"/>
      
    </LinearLayout>
    <LinearLayout
      android:orientation="horizontal"
	  android:layout_width="fill_parent"
	  android:layout_height="wrap_content">
      
      <TextView
	    android:layout_width="wrap_content"
	    android:layout_height="fill_parent"
	    android:textColor="#66FF66"
	    android:padding="2dip"
	    android:text="@string/tvTimeLabel"/>
      
      <TextView
	    android:id="@+id/text2"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:textColor="#FFFFFF"
	    android:padding="2dip"/>
      
    </LinearLayout>

</LinearLayout>
